--- a/Share Extension/id.lproj/InfoPlist.strings
+++ b/Share Extension/id.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
 /* Bundle display name */
-"CFBundleDisplayName" = "Bagikan Sambungan";
+"CFBundleDisplayName" = "Bagikan Ekstensi";
 
 /* Bundle name */
-"CFBundleName" = "Bagikan Sambungan";
+"CFBundleName" = "Bagikan Ekstensi";
 
