--- a/Halloapp/es.lproj/InfoPlist.strings
+++ b/Halloapp/es.lproj/InfoPlist.strings
@@ -7,9 +7,12 @@
 /* Privacy - Contacts Usage Description */
 "NSContactsUsageDescription" = "Permite que HalloApp acceda a tus contactos para poder compartir y ver publicaciones de tus amigos y familiares.";
 
+/* Privacy - Location When In Use Usage Description */
+"NSLocationWhenInUseUsageDescription" = "Esto te permite buscar y compartir ubicaciones cerca de ti.";
+
 /* Privacy - Microphone Usage Description */
 "NSMicrophoneUsageDescription" = "Esto permite que hagas llamadas, envíes audios y mensajes, y grabes videos con sonidos.";
 
 /* Privacy - Photo Library Usage Description */
-"NSPhotoLibraryUsageDescription" = "Esto permite compartir fotos y videos de tu galería y guardar los que haces.";
+"NSPhotoLibraryUsageDescription" = "Esto permite compartir fotos y videos de tu galería y guardar los que capturas.";
 
