--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -433,6 +433,9 @@
 /* Warning text displayed in Comments when post wasn't available. */
 "comments.post.loading.failed" = "خطا در بارگذاری پست. لطفاً بعداً‌ دوباره امتحان کنید.";
 
+/* Label for add media button in post composer */
+"composer.addmedia" = "اضافه فایل";
+
 /* Accessibility label for add images button */
 "composer.audio.a11y.addImages" = "اضافه کردن عکس";
 
@@ -886,6 +889,9 @@
 /* Tag for new posts in groups grid */
 "groupGrid.newPostIndicator" = "جدید";
 
+/* Shown when post fails or is canceled. */
+"groupGrid.post.failed" = "خطا در پست";
+
 /* More info menu item */
 "groupGridHeader.moreInfo" = "اطلاعات بیشتر";
 
@@ -985,6 +991,9 @@
 /* Version of an invitation to join HalloApp. The argument is the invitee's name. */
 "invite.text.specific.4" = "سلام @%! به من در هالواپ بپیوند و لحظه‌های جدیدت را با دوستان واقعیت به اشتراک بگذار. به این سایت برو: https://halloapp.com/new";
 
+/* Version of an invitation to join HalloApp. No arguments */
+"invite.text.specific.5" = "شما را دعوت میکنم به من در هالواپ بپیوندید. برنامه‌ای ایمن و خصوصی برای به اشتراک گذاشتن عکس‌ها، پیام‌ها و تماس‌ها با دوستانتان. آن را از این وبسایت دریافت کنید https://halloapp.com/get";
+
 /* Title for the screen that allows to select contact to invite. */
 "invite.title" = "دعوت دوستان";
 
@@ -1011,6 +1020,42 @@
 
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "برنامه را به روز رسانی کنید.";
+
+/* General message of the alert for failures in location sharing features. */
+"locationSharing.alert.error" = "خطا. لطفاً‌ بعداً‌ امتحان کنید.";
+
+/* Title of the alert for failures in location searches. */
+"locationSharing.alert.localSearchFailed.title" = "خطا در جستجوی مکان";
+
+/* Message of the alert requesting location access for a feature. */
+"locationSharing.alert.locationAccessRequired.message" = "میتوانید این اجازه را در تنظیمات فعال کنید.";
+
+/* Title of the alert requesting location access for a feature. */
+"locationSharing.alert.locationAccessRequired.title" = "هالواپ برای این امکانات نیاز به دسترسی به مکان شما دارد.";
+
+/* Title of the alert for failures resolving a location from the map. */
+"locationSharing.alert.locationResolvingFailed.title" = "خطا در مکان‌یابی";
+
+/* Title of the menu to choose map type. */
+"locationSharing.chooseMap" = "انتخاب نقشه";
+
+/* Subtitle of the user location callout. Parameter is the formatted length measurement of accuracy (including unit). */
+"locationSharing.locationAccuracyDescription" = "دقت تا @%";
+
+/* The explore map type (as in Apple Maps). */
+"locationSharing.mapType.explore" = "کاوش";
+
+/* The satellite map type (as in Apple Maps). */
+"locationSharing.mapType.satellite" = "ماهواره";
+
+/* The menu action to focus on user location. */
+"locationSharing.myLocation" = "مکان من";
+
+/* Title of the location sharing main screen. */
+"locationSharing.navTitle" = "مکان";
+
+/* Title of a location in location list if it does not have a name. */
+"locationSharing.untitledLocation" = "مکان بدون نام";
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "من";
@@ -1224,6 +1269,18 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "ویدیو 📹";
+
+/* New moment unlock notification text to be shown to the user. */
+"notification.unlocked.moment.1" = "@% لحظه‌ای را به اشتراک گذاشت و لحظه شما را باز کرد";
+
+/* New moment unlock notification text to be shown to the user. */
+"notification.unlocked.moment.2" = "@$1% و @$2% لحظه‌ای را به اشتراک گذاشتند و لحظه شما را باز کرد";
+
+/* New moment unlock notification text to be shown to the user. */
+"notification.unlocked.moment.3" = "@$1% و @$2% و @$3% لحظه‌ای را به اشتراک گذاشتند و لحظه شما را باز کرد";
+
+/* New moment unlock notification text to be shown to the user. */
+"notification.unlocked.moment.4" = "@$1% و @$2% و @$3% و دیگران لحظه‌ای را به اشتراک گذاشتند و لحظه شما را باز کرد";
 
 /* Missed video call notification text to be shown to the user. */
 "notification.videocall.missed" = "📹 تماس ویدیویی از دست رفته";
