--- a/Halloapp/id.lproj/InfoPlist.strings
+++ b/Halloapp/id.lproj/InfoPlist.strings
@@ -2,14 +2,17 @@
 "CFBundleName" = "HalloApp";
 
 /* Privacy - Camera Usage Description */
-"NSCameraUsageDescription" = "Dengan ini Anda dapat mengambil foto dan video langsung dari HalloApp.";
+"NSCameraUsageDescription" = "Fitur ini memungkinkan Anda mengambil foto dan video langsung dari HalloApp.";
 
 /* Privacy - Contacts Usage Description */
 "NSContactsUsageDescription" = "Izinkan HalloApp mengakses kontak Anda agar dapat berbagi dan melihat postingan dari teman dan keluarga Anda.";
 
+/* Privacy - Location When In Use Usage Description */
+"NSLocationWhenInUseUsageDescription" = "Fitur ini memungkinkan Anda menelusuri dan membagikan lokasi di sekitar Anda.";
+
 /* Privacy - Microphone Usage Description */
-"NSMicrophoneUsageDescription" = "Hal ini memungkinkan Anda melakukan panggilan, mengirim postingan dan pesan audio, serta merekam video dengan suara.";
+"NSMicrophoneUsageDescription" = "Fitur ini memungkinkan Anda melakukan panggilan, mengirim postingan dan pesan audio, serta merekam video dengan suara.";
 
 /* Privacy - Photo Library Usage Description */
-"NSPhotoLibraryUsageDescription" = "Dengan ini Anda dapat membagikan foto dan video dari galeri Anda dan menyimpan foto dan video yang Anda ambil.";
+"NSPhotoLibraryUsageDescription" = "Fitur ini memungkinkan Anda membagikan foto dan video dari perpustakaan Anda serta menyimpan foto dan video yang Anda ambil.";
 
