--- a/Notification Service Extension/id.lproj/Localizable.strings
+++ b/Notification Service Extension/id.lproj/Localizable.strings
@@ -1,8 +1,8 @@
 /* Title for alert shown when there's no internet connectivity */
-"alert.no.internet.title" = "Tidak Ada Koneksi Internet";
+"alert.no.internet.title" = "Tidak Ada Sambungan Internet";
 
 /* Message to tell the user to try again when they have internet connectivity again */
-"alert.no.internet.try.again" = "Periksa jika Anda terhubung ke internet, lalu coba lagi.";
+"alert.no.internet.try.again" = "Silakan periksa jika Anda terhubung ke internet, lalu coba lagi.";
 
 /* Company name */
 "app.name.halloapp" = "HalloApp";
@@ -80,13 +80,13 @@
 "Delete" = "Hapus";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
-"feed.privacy.descr.all" = "Bagikan dengan semua kontak";
+"feed.privacy.descr.all" = "Bagikan dengan semua kontak saya";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
-"feed.privacy.descr.except" = "Bagikan dengan kontak kecuali orang yang saya pilih";
+"feed.privacy.descr.except" = "Bagikan dengan kontak saya kecuali orang yang saya pilih";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
-"feed.privacy.descr.only" = "Hanya bagikan dengan kontak pilihan";
+"feed.privacy.descr.only" = "Hanya bagikan dengan kontak yang dipilih";
 
 /* Button to dismiss edit favorites modal */
 "feed.privacy.list.dismiss.edit.favorites" = "Nanti";
@@ -107,7 +107,7 @@
 "feed.privacy.list.set.favorites" = "Atur Favorit";
 
 /* Description of the new Favorites functionality. */
-"feed.privacy.list.set.favorites.description" = "Sekarang Anda dapat membuat daftar kontak favorit dan membagikan postingan Anda dengan mereka.";
+"feed.privacy.list.set.favorites.description" = "Sekarang Anda dapat membuat daftar kontak favorit dan membagikan postingan HalloApp Anda dengan mereka.";
 
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Anda ditambahkan ke grup baru";
@@ -134,7 +134,7 @@
 "notification.contact.unknown.content" = "Salah satu kontak Anda sekarang di HalloApp";
 
 /* Content for inviter notification. */
-"notification.invite.accepted.content" = "%@ baru menerima undangan Anda untuk bergabung dengan HalloApp 🎉";
+"notification.invite.accepted.content" = "%@ baru saja menerima undangan Anda untuk bergabung dengan HalloApp 🎉";
 
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "Momen baru";
@@ -180,6 +180,18 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 video";
+
+/* New moment unlock notification text to be shown to the user. */
+"notification.unlocked.moment.1" = "%@ membagikan momen baru dan membuka momen Anda";
+
+/* New moment unlock notification text to be shown to the user. */
+"notification.unlocked.moment.2" = "%1$@ dan %2$@ membagikan momen baru serta membuka momen Anda";
+
+/* New moment unlock notification text to be shown to the user. */
+"notification.unlocked.moment.3" = "%1$@, %2$@, dan %3$@ membagikan momen baru serta membuka momen Anda";
+
+/* New moment unlock notification text to be shown to the user. */
+"notification.unlocked.moment.4" = "%1$@, %2$@, %3$@, dan lainnya membagikan momen baru serta membuka momen Anda";
 
 /* Missed video call notification text to be shown to the user. */
 "notification.videocall.missed" = "📹 Panggilan video tak terjawab";
